# OPEP_project

./: .gitignore  CLAUDE.md  CMakeLists.txt  Makefile  README.md  README_GUI.md  main.cpp
.claude/: settings.local.json
data/: users.db
data/Liam/: tasks.db  transactions.db
docs/: class_diagram.puml  oop_compliance_summary.md  sequence_add_expense.puml  sequence_add_expense_process.puml  sequence_login.puml  sequence_login_session.puml
gui/: appservice.cpp  appservice.h  loginwindow.cpp  loginwindow.h  main_gui.cpp  mainwindow.cpp  mainwindow.h
include/core/: exceptions.h  record.h
include/data/: auth.h  encryption.h  file_manager.h  user.h
include/money/: budget.h  transaction.h  wallet.h
include/task/: task.h  task_manager.h
include/ui/: dashboard.h  input_validator.h  menu.h
src/core/: record.cpp
src/data/: auth.cpp  encryption.cpp  user.cpp
src/money/: budget.cpp  transaction.cpp  wallet.cpp
src/task/: task.cpp  task_manager.cpp
src/ui/: dashboard.cpp  input_validator.cpp  menu.cpp
tests/: run_all_tests.cpp  test_auth.cpp  test_budget.cpp  test_encryption.cpp  test_framework.h  test_input_validator.cpp  test_polymorphism.cpp  test_record.cpp  test_task.cpp  test_task_manager.cpp  test_transaction.cpp  test_wallet.cpp
